# GraAda3D

./: .gitignore  CMakeLists.txt  Config.cmake  GraAda3D  GraInvRect  Makefile  Padding_test  README.md  Readme.md  Synthetic_data1  compile_commands.json  makeModel  makeSyntheticTest  makefile
Examples/: Tzz.py  apriori_model.nc  crg_model  dobs_T_xz  dobs_T_zz  dobs_Txz_Tyz_Tzz  dobs_Tzz_Txz_Tyz  gz.py  plotInterpTrueModel.py  ref_model.vtk  sites  test_model.nc  test_model.vtk  true_model_crosssections.py  zyy.yml
Examples/GMT_plotting_example/: GMT_slice_node_reg.sh  GMT_slice_pixel_reg.sh  README.md  README.txt  cross_section1.nc  cross_section1.txt  cross_section2.nc  cross_section2.txt  line1  sampled_hslice  zpoints.txt
Examples/Inv_Txz_Tyz_Tzz/: Iteration_misfit_GN  Txz_Tyz_Tzz.py  Tzz_result.nc  Tzz_result.vtk  Tzz_result_points.vtk  config_inversion  dobs_T_xz  dpredicted_T_xz  dpredicted_T_yz  dpredicted_T_zz  info  lambda_misfit_GN
Examples/Inv_Tzz/: Iteration_misfit_GN  Tzz_result.nc  Tzz_result.txt  Tzz_result.vtk  Tzz_result_points.vtk  config_data  dobs.vtk  dpredicted.vtk  dpredicted_T_zz  info  lambda_misfit_GN  plotInterpData.py
Examples/Inv_gz/: Iteration_misfit_GN  a.vtk  cell.csv  config_data  config_inversion  crossSections.py  crossSections2.py  dobs.vtk  dpredicted.vtk  dpredicted_g_z  gz_result.nc  gz_result.txt  gz_result.vtk  gz_result_points.vtk  info  lambda_misfit_GN  plotInterpData.py  plot_volume.py  result_at_0.nc  result_at_1.nc  result_at_1.vtk
Examples/Inv_gz_with_padding/: config_inversion  config_model  dpredicted_g_z  gz_result.vtk  info  initial_mesh.vtk
Examples/Inv_with_cross_gradient_constraint/: Iteration_misfit_GN  Structural_constraint_at_0.nc  Structural_constraint_at_1.nc  Structural_constraint_at_2.nc  Structural_constraint_at_3.nc  Structural_constraint_at_4.nc  config_inversion  crossSections.py  crossSections2.py  dpredicted_g_z  gz_result_with_crg.nc  gz_result_with_crg.vtk  info  lambda_misfit_GN  result_at_0.nc  result_at_0.vtk  result_at_1.nc  result_at_1.vtk  result_at_2.nc  result_at_2.vtk  result_at_3.nc  result_at_3.vtk  result_at_4.nc  result_at_4.vtk  result_at_5.nc  result_at_5.vtk
Examples/Inv_with_ref/: Converted_density_model_at_0.nc  Converted_density_model_at_1.nc  Converted_density_model_at_5.nc  Inversion_result.pvsm  Iteration_misfit_GN  config_data  config_inversion  crossSections.py  crossSections2.py  dpredicted.vtk  dpredicted_g_z  gz_result_with_ref.nc  gz_result_with_ref.txt  gz_result_with_ref.vtk  gz_result_with_ref_points.vtk  info  lambda_misfit_GN  plotCrossSections.py  plotInterpData_with_ref.py  ref_model.nc  result_at_0.nc  result_at_0.vtk  result_at_1.nc  result_at_1.vtk  result_at_2.nc  result_at_2.vtk  result_at_3.vtk  result_at_4.nc  result_at_4.vtk  result_at_5.nc  result_at_5.vtk
Examples/Inversion_Tzz/: config_inversion  crossSections.py  crossSections2.py
Examples/Inversion_gz/: Inversion_result.pvsm  Iteration_misfit_GN  config_data  config_inversion  crossSections.py  crossSections2.py  dobs_g_z  dpredicted_g_z  gz_result.nc  gz_result.vtk  info  lambda_misfit_GN
Examples/Karstic_cave/: Iteration_misfit_GN  config_data  config_model  dobs.vtk  dobs_g_z  dpredicted.vtk  dpredicted_g_z  gz_result.nc  gz_result.vtk  gz_result_points.vtk  info  initial_mesh.vtk  lambda_misfit_GN  plotInterpData.py  plot_data_fitting.py  result_at_0.vtk  result_at_1.vtk  result_at_2.vtk  result_at_3.vtk  result_at_4.vtk  result_at_5.vtk  result_at_6.vtk
Examples/L0_inv_gz(Minimum_support)/: config_model  gz_result.vtk  info
Examples/L1_Inv_Tzz/: Iteration_misfit_GN  Tzz_result.nc  dobs_T_zz  dpredicted_T_zz  info
Examples/L1_inv_Txz_Tyz_Tzz/: Txz_Tyz_Tzz.py  Tzz_result.vtk  config_data  config_inversion  config_model  dobs_T_zz  dpredicted_T_yz  dpredicted_T_zz  info  lambda_misfit_GN
Examples/L1_inv_gz/: Iteration_misfit_GN  config_inversion  crossSections2.py  dobs_g_z  dpredicted.vtk  dpredicted_g_z  gz_result.nc  gz_result.vtk  gz_result_L1.vtk  info  lambda_misfit_GN  plotCrossSections.py  plotInterpData_L1.py  result_at_0.vtk
Examples/L1_inv_with_cross_gradient_constraint/: Iteration_misfit_GN  config_inversion  crg_model.nc  crg_model.vtk  crossSections2.py  gz_result_with_crg.nc  gz_result_with_crg.vtk  lambda_misfit_GN
Examples/L1_inv_with_ref/: Inversion_result.pvsm  Iteration_misfit_GN  config_inversion  crossSections2.py  dobs_g_z  dpredicted_g_z  gz_result_with_ref.nc  gz_result_with_ref.vtk  info  lambda_misfit_GN  ref_model.vtk
Examples/Preprocessing_example/: data_preprocessing.ipynb
Examples/test_generatePoints/: test_points
Examples/test_make_model/: build.sh  constraint.vtk  constraint_as_input_format.xyz  test_model1.vtk
Examples0/: apriori_model.nc  dobs_T_xz  dobs_T_yz  dobs_g_z  dobs_no_noise_T_xz  dobs_no_noise_T_yz  dobs_no_noise_T_zz  dobs_no_noise_g_z  ref_model  test_model.vtk  true_model.pvsm
Examples0/Inv_Txz_Tyz_Tzz/: Iteration_misfit_GN  Tzz_result.vtk  config_data  config_inversion  dobs.vtk  dpredicted.vtk  dpredicted_T_xz  dpredicted_T_yz  dpredicted_T_zz  gz_result.nc  gz_result.txt  gz_result.vtk  gz_result_points.vtk  info  lambda_misfit_GN  plotInterpData.py  result.nc  result.txt  result.vtk  result_points.vtk
Examples0/Inv_Tzz/: Iteration_misfit_GN  Tzz_result.nc  Tzz_result.txt  Tzz_result.vtk  Tzz_result_points.vtk  config_data  config_inversion  dobs.vtk  dobs_T_zz  dpredicted.vtk  dpredicted_T_zz  info  lambda_misfit_GN  plotCrossSections.py
Examples0/Inv_gz/: Inversion_result.pvsm  info  (+11 more)
Examples0/Inv_gz (Copy 2)/: Iteration_misfit_GN  config_inversion  dpredicted.vtk  dpredicted_g_z  gz_result.nc  gz_result.txt  gz_result.vtk  gz_result_points.vtk  info  lambda_misfit_GN
GUI/: config_data  config_inversion.py
PythonPlot/: Graplot.yml  interpData.py
doc/: PREREQUISITES-zh.docx
src/: GraAda3D.cpp  GraInvRect.cpp  Padding_test.cpp  Synthetic_data1.cpp  Test_ordering.cpp  compute.cpp  generatePoints.cpp  makeModel.cpp  test_wavelet_forward1.cpp  test_wavelet_forward2.cpp
test/: interpData.py  plotInterpData2.py
(+402 files in other folders)
